--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,6 +40,8 @@ jobs:
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
       - if: github.event_name == 'push'
+        uses: actions/checkout@v2
+      - if: github.event_name == 'push'
         name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
         env:
