--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,7 +30,7 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, " "), "#skip")
+      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -39,9 +39,9 @@ jobs:
           healthcheck: 'https://cicd-full-stack-open.herokuapp.com/health'
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
-      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, " "), "#skip")
+      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')
         uses: actions/checkout@v2
-      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, " "), "#skip")
+      - if: github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip')
         name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
         env:
