--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,14 +49,13 @@ jobs:
           DEFAULT_BUMP: patch
       - if: failure() && github.event_name == 'push'
         name: Notify discord that build failed
-        env: 
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
+
       - if: success() && github.event_name == 'push'
         name: Notify discord that new version was deployed
         uses: rjstone/discord-webhook-notify@v1.0.4
         with:
+          avatarUrl: https://avatars.githubusercontent.com/u/41546861?v=4
           text: "A new version of Pokedex deployed"
           description: "to https://cicd-full-stack-open.herokuapp.com by ${{ github.event.pusher.name }}"
-          severity: error
+          severity: info
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
