--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,12 @@ jobs:
           DEFAULT_BUMP: patch
       - if: failure() && github.event_name == 'push'
         name: Notify discord that build failed
-        run: echo "hi"
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        with:
+          text: "Build failed"
+          description: "commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :("
+          severity: error
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - if: success() && github.event_name == 'push'
         name: Notify discord that new version was deployed
         uses: rjstone/discord-webhook-notify@v1.0.4
