--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -13,7 +13,7 @@ jobs:
         uses: jtalk/url-health-check-action@v2
         with:
           # Check the following URLs one by one sequentially
-          url: https://cicd-full-stack-open.herokuapp.com/health
+          url: https://cicd-full-stack-open.herokuapp.com
           # Fail this action after this many failed attempts
           max-attempts: 2 # Optional, defaults to 1
           # Delay between retries
